--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
   <body >
       <p>This data will be updated dynamically.</p>
+    </br>
+  
+  <p>Contact :+918692047749</br>
+officialparthmaniar@gmail.com</br>
+parth.maniar@somaiya.edu
+</p>
    </body>
 
 
@@ -75,10 +81,6 @@
 
 </body>
 
-<p>Created By Parth Maniar
-+918692047749
-officialparthmaniar@gmail.com
-parth.maniar@somaiya.edu
-</p>
+
 
 </html>
