--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <p>This data will be updated dynamically.</p>
     </br>
   
-  <p>Contact :+918692047749</br>
-officialparthmaniar@gmail.com</br>
+  <p>Contact :+918692047749
+officialparthmaniar@gmail.com
 parth.maniar@somaiya.edu
 </p>
    </body>
