--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <p>This data will be updated dynamically.</p>
     </br>
   
-  <p>Contact :+918692047749
+  <b><p>Contact :+918692047749
 officialparthmaniar@gmail.com
 parth.maniar@somaiya.edu
-</p>
+</p><b>
    </body>
 
 
