--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
 <body>
 
   <body >
+    <div class="scrolling-limit">
+  <div class="scrolling"> 
       <p>This data will be updated dynamically.</p>
     </br>
   
   <b><p>Contact :+918692047749
 officialparthmaniar@gmail.com
 parth.maniar@somaiya.edu
-</p><b>
+    </p><b></div></div>
    </body>
 
 
