--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="scrolling-limit">
   <div class="scrolling"> 
       
-  <b><p>Contact :+918692047749
-officialparthmaniar@gmail.com
+  <b><p>Contact :+918692047749 |
+officialparthmaniar@gmail.com |
 parth.maniar@somaiya.edu
     </p><b></div></div>
    </body>
