--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodiyapaWeather</title>
+  <title>Amalgamation Of Weather</title>
   
   
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
@@ -18,7 +18,7 @@
 
   <body >
     <div class="scrolling-limit">
-  <div class="scrolling"> 
+  <div class="scrolling center"> 
       
   <b><p>Contact :+918692047749 |
 officialparthmaniar@gmail.com |
