--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <body >
-    <div class="scrolling-limit">
+    <div class="scrolling-limit center">
   <div class="scrolling center"> 
       
   <b><p>Contact :+918692047749 |
