--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     <div class="scrolling-limit center">
   <div class="scrolling center"> 
       
-  <b><p>Contact :+918692047749 |
-officialparthmaniar@gmail.com |
-parth.maniar@somaiya.edu
+   <b><p>Developed By Parth Maniar <br>Contact:+918692047749 |
+officialparthmaniar@gmail.com
     </p><b></div></div>
    </body>
 
