--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ officialparthmaniar@gmail.com
 
 
 </body>
-<div align=center><a href='https://www.counter12.com'>VISITOR COUNT :<img src='https://www.counter12.com/img-d6Aba2Z4Z1c74yCz-13.gif' border='0' alt='free counter'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=d6Aba2Z4Z1c74yCz'></script></div>
+<div align=center><a>VISITOR COUNT :<img src='https://www.counter12.com/img-d6Aba2Z4Z1c74yCz-13.gif' border='0' alt='free counter'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=d6Aba2Z4Z1c74yCz'></script></div>
 
 
 </html>
